[package]
name = "zk-cds"
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "LICENSE-MIT", "LICENSE-APACHE", "README.md"]

[dependencies]
p256 = { version = "0.13.2", features = ["hash2curve"] }
rand = "0.8.5"
sha2 = { version = "0.10.8", features = ["asm"] }
uuid = { version = "1.5.0", features = ["std", "v4"] }

[dev-dependencies]
criterion = "0.5.1"
rand_chacha = "0.3.1"

[[bench]]
name = "benchmarks"
harness = false
